--- a/app/src/main/res/layout/activity_my_glactivity.xml
+++ b/app/src/main/res/layout/activity_my_glactivity.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.learn.proandroidkotlin.activity.MyGLActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.learn.proandroidkotlin.customviews.OwnCustomView
+        android:layout_width="match_parent"
+        app:fillColor="@android:color/holo_green_dark"
+        android:layout_height="match_parent"/>
+</LinearLayout>
