--- a/app/src/main/res/layout/activity_my_glactivity.xml
+++ b/app/src/main/res/layout/activity_my_glactivity.xml
@@ -2,13 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.learn.proandroidkotlin.activity.MyGLActivity">
 
+<!--
+    <Button
+        android:id="@+id/btnChangeColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Color" />
+
     <com.learn.proandroidkotlin.customviews.OwnCustomView
+        android:id="@+id/myView"
         android:layout_width="match_parent"
-        app:fillColor="@android:color/holo_green_dark"
+        android:layout_height="match_parent"
+        app:fillColor="@android:color/holo_green_dark" />-->
+
+    <com.learn.proandroidkotlin.customlayout.OwnCustomLayout
+        android:id="@+id/custom_layout"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 </LinearLayout>
