--- a/app/src/main/res/layout/activity_display_my_view.xml
+++ b/app/src/main/res/layout/activity_display_my_view.xml
@@ -7,7 +7,7 @@
     tools:context="com.learn.proandroidkotlin.activity.DisplayMyViewActivity">
 
 
-    <com.learn.proandroidkotlin.customviews.PrimitiveDrawer
+    <com.learn.proandroidkotlin.customviews.AnimationExampleView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
