--- a/app/src/main/res/layout/activity_path_effect.xml
+++ b/app/src/main/res/layout/activity_path_effect.xml
@@ -10,9 +10,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />-->
 
-
+    <Button
+        android:id="@+id/btnClear"
+        android:text="CLEAR"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <com.learn.proandroidkotlin.customviews.MyViewTouch
+        android:id="@+id/myViewTouch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -22,6 +27,6 @@
         android:layout_height="300dp"
         android:adjustViewBounds="true"
         android:scaleType="matrix"
-        android:visibility="visible"
+        android:visibility="gone"
         android:src="@drawable/girl1" />
 </RelativeLayout>
