--- a/app/src/main/res/layout/activity_shader_filter.xml
+++ b/app/src/main/res/layout/activity_shader_filter.xml
@@ -56,6 +56,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Blur" />
+
+            <Button
+                android:id="@+id/Gray"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gray" />
         </LinearLayout>
     </HorizontalScrollView>
 
